fix . operator support jar execution

--- a/src/main/resources/zircon/index.html
+++ b/src/main/resources/zircon/index.html
@@ -16,7 +16,7 @@
 <script type="text/javascript">
 jQuery(function($) {
     $('#run').on('click', function() {
-        $.post('api', $('form').serialize(), function(r) { $('#output').val(r); });
+        $.post('', $('form').serialize(), function(r) { $('#output').val(r); });
     });
 });
 </script>
