adjust logging jax-rs static resource support

--- a/src/main/resources/zircon/web/index.html
+++ b/src/main/resources/zircon/web/index.html
@@ -16,7 +16,9 @@
 <script type="text/javascript">
 jQuery(function($) {
     $('#run').on('click', function() {
-        $.post('', $('form').serialize(), function(r) { $('#output').val(r); });
+        $.post('', $('form').serialize(), function(r) {
+            $('#output').val(r);
+        });
     });
 });
 </script>
